--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 
 <body>
   <div class="container">
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <img src="images/brandicon.png" height="50" width="50">
+          <a class="navbar-brand">Angular-Firebase Bus Tracker</a>
+        </div>
+      </div>
+    </nav>
     <app>Loading...</app>
   </div>
 
