Added two pages and a service

--- a/index.html
+++ b/index.html
@@ -5,23 +5,11 @@
   <base href="/" />
   <title>Angular 2 setup</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" />
-  <style>
-    .selected-order {
-      background-color: #CFD8DC;
-    }
-  </style>
+  <link rel="stylesheet" href="app/styles.css">
 </head>
 
 <body>
   <div class="container">
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <img src="images/brandicon.png" height="50" width="50">
-          <a class="navbar-brand">Angular-Firebase Bus Tracker</a>
-        </div>
-      </div>
-    </nav>
     <app>Loading...</app>
   </div>
 
