Aligned with Kirti's implementation

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-  <div class="container">
-    <app>Loading...</app>
+  <div>
+    <app-root>Loading...</app-root>
   </div>
 
   <script src="node_modules/es6-shim/es6-shim.min.js"></script>
